if(USE_CUDA)
    set(SOURCES main.cpp gpu_encryptor.cu factory.cpp cpu_encryptor.cpp)
else()
    set(SOURCES main.cpp cpu_encryptor.cpp factory.cpp)
endif()

add_executable(moby-dick ${SOURCES})

if(USE_CUDA)
    message(STATUS "MY CUDA ENV IS ENABLED")
    set_property(TARGET moby-dick PROPERTY CUDA_ARCHITECTURES 89)
    target_link_libraries(moby-dick PRIVATE CUDA::cudart)
    target_compile_definitions(moby-dick PRIVATE USE_CUDA)
else()
    message(STATUS "MY CUDA IS NOT ENABLED")
endif()
